// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Basic 1`] = `
[
  {
    "en": {
      "hello": "Hello!",
    },
    "ja": {
      "hello": "こんにちは！",
    },
  },
]
`;

exports[`Multiple blocks 1`] = `
[
  {
    "en": {
      "hello": "Hello!",
    },
    "ja": {
      "hello": "こんにちは！",
    },
  },
  {
    "foo": "foo",
  },
]
`;
